# Crafty

./: .gitignore  Dockerfile  README.md  compare.sh  compile-all.sh  fetch.sh  run-bank.sh  time.sh  transfer.sh
arch-dep/: compile_in_node.sh  scp_to_node.sh
arch-dep/include/: arch.h  rdtsc.h
exparser/: .gitignore  requirements.txt  setup.py
exparser/exparser/: __init__.py  api.py  collect.py  collections.py  discover.py  stats.py
exparser/scripts/: Crafty.py
htm-alg/: CMakeLists.txt  cmake_deb.txt  compile.sh  compile_in_node.sh
htm-alg/include/: htm_retry_template.h
htm-alg/src/: htm.cpp
htm-alg/test/: compile.sh  main.c
misc/: matplotlibrc  parse-results.sh  results.tex  timing.c
nv-htm/: Makefile  Makefile_common.inc  Makefile_crafty.inc  Makefile_htm_only.inc  Makefile_nvhtm.inc  Makefile_nvhtm_lc.inc  Makefile_nvhtm_pc.inc  Makefile_options.inc  Makefile_phtm.inc  PREREQS  README  README.md  TODO.txt  compile.sh  compile_in_node.sh  mem_footprint.sh  run_in_node.sh  useful_info.txt
nv-htm/common/: cp.h  global_types.h  nh.h  nh_defines.h  nh_globals.h  nh_types.h  nvhtm.h  nvhtm_helper.h  nvmlib_wrapper.h  tm.h  utils.h
nv-htm/common/src/: cp.cpp  nh_globals.cpp  nvhtm.cpp  tm.cpp  utils.cpp
nv-htm/crafty/: extra_globals.h  extra_types.h  log.h  nh_sol.h
nv-htm/crafty/src/: extra_globals.cpp  log.cpp  nvhtm_helper.cpp
nv-htm/htm_only/: extra_globals.h  extra_types.h  log.h  nh_sol.h
nv-htm/htm_only/src/: nvhtm_helper.cpp  (+1 more)
nv-htm/nvhtm_common/: extra_globals.h  extra_types.h  log.h  log_aux.h  log_backward.h  log_forward.h  log_sorter.h
nv-htm/nvhtm_lc/: nh_sol.h
nv-htm/nvhtm_pc/: nh_sol.h
nv-htm/phtm/: extra_globals.h  extra_types.h  log.h  nh_sol.h
nv-htm/test/: TODO.txt  bank.c  bank_bak.c  clock.c  run_bank_bench.sh  run_bank_cmp.sh
nvm-emulation/: .gitignore  CMakeLists.txt  cmake_utils.txt  compile.sh  compile_in_node.sh  main.c
nvm-emulation/include/: min_nvm.h
nvm-emulation/src/: min_nvm.cpp
tinystm/: Makefile.common  compile_in_node.sh
tinystm/abi/: abi.c
tinystm/include/: HTM_arch.h  HTM_impl.h  stm.h
tinystm/src/: stm.c  stm_internal.h  stm_wt.h  stm_wt_htm.h  wrappers.c
tm-framework/: README  compile_in_node.sh  cp_to_node.sh
tm-framework/backends/: README.txt
tm-framework/benchmarks/: Makefile.common  cp_to_node.sh
tm-framework/scripts/: SCRIPT_compute_AVG.R  SCRIPT_compute_AVG_ERR.R  SCRIPT_concat_files.R  SCRIPT_cut_mark.sh  SCRIPT_put_column.R  SCRIPT_rem_CR.sh  TODO.txt
(+312 files in other folders)
